# Saska

./: .gitignore  .projectile  CMakeLists.txt  LICENSE  README.md  build.bat
assets/: game.variables
assets/maps/: planets.map  sandbox.map
assets/models/: spaceman.blend  spaceman.blend1  spaceman_hover.blend  spaceman_hover.dae  spaceman_idle.dae  spaceman_sitting.blend1  spaceman_test.dae
assets/shaders/: atmosphere.frag  atmosphere.geom  build.bat  cubemap_prefiltered_generator.frag  cubemap_prefiltered_generator.geom  debug_frustum.vert  deferred_lighting.frag  explosion_particle.frag  explosion_particle.vert  hitbox_render.vert  imported_model.geom  imported_model.vert  lp_notex_animated.frag  lp_notex_animated.geom  lp_notex_animated.vert  lp_notex_animated_alpha.frag  lp_notex_animated_alpha.vert  lp_notex_model.frag  lp_notex_model.geom  lp_notex_model.vert  lp_notex_model_alpha.frag  lp_notex_model_shadow.geom  lp_notex_model_shadow.vert  model.frag  model.geom  model.vert  model_shadow.geom  model_shadow.vert  pfx_final.frag  pfx_ssr.frag  pfx_ssr.vert  render_atmosphere.frag  render_atmosphere.vert  sun.frag  sun.vert  terrain.geom  terrain.vert  terrain_pointer.vert  terrain_shadow.vert  test.vert  (+9 more)
code/: #.debug#  .org  Makefile  bluebrint_sheet  build.bat  compile.bat  core.cpp  core.hpp  error_codes  file_system.cpp  file_system.hpp  game.cpp  game.hpp  graphics.cpp  graphics.hpp  load.cpp  load.hpp  memory.cpp  memory.hpp  network.cpp  network.hpp  progress.md  rendering.cpp  rendering.hpp  scene.cpp  scene.hpp  script.cpp  script.hpp  ui.cpp  ui.hpp  utils.hpp  vulkan.cpp  vulkan.hpp  win32_core.cpp  world.cpp  world.hpp  world.old.cpp
code/config/: backup  desc.json  fbos.json  pipelines.json  render_passes.json  rndr.json  rndr_pass.json
code/font/: fixedsys.fnt  menlo.fnt
code/models/: cowboy.mesh_custom  cowboy.skeleton_custom  debug_collada.dae  debug_collada.mesh_custom  debug_collada2.dae  icosphere.mesh_custom  possible_planet.mesh_custom  spaceman.animations_custom  spaceman.blend  spaceman.dae  spaceman.mesh_custom  spaceman_hover.blend  spaceman_hover.blend1  spaceman_idle.animations_custom  spaceman_idle.blend  spaceman_idle.blend1  spaceman_jump.blend  spaceman_run.blend  (+8 more)
source/: #chunks_gstate.cpp#  #entities_gstate.cpp#  .#chunks_gstate.cpp  .#graphics.cpp  .#graphics.hpp  allocators.cpp  allocators.hpp  atmosphere.cpp  atmosphere.hpp  build.bat  bullet.cpp  bullet.hpp  camera_view.cpp  camera_view.hpp  chunk.cpp  chunk.hpp  chunks_gstate.cpp  chunks_gstate.hpp  client.cpp  client.hpp  collision.cpp  collision.hpp  component.cpp  component.hpp  containers.hpp  core.cpp  core.hpp  debug_overlay.cpp  debug_overlay.hpp  deferred_renderer.cpp  deferred_renderer.hpp  entities_gstate.cpp  entities_gstate.hpp  entity.hpp  event_system.cpp  event_system.hpp  file_system.cpp  file_system.hpp  fonts.cpp  fonts.hpp  (+54 more)
(+385 files in other folders)
